--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,9 +4,15 @@
 	box-sizing: border-box;
 }
 
-body{
+#mainWrapper{
+	position: relative;
 	background: url(../img/town_2.jpg) no-repeat;
 	background-size: 100%;
+	max-width: 1300px;
+	max-height: 800px;
+	min-width: 1300px;
+	min-height:  778px;
+	margin: 0 auto;
 }
 
 #role{
@@ -17,12 +23,14 @@ body{
 	/*background-size: 100%;*/
 	top: 500px;
 	left: 600px;
+	cursor: pointer;
 }
 
 .npc_1{
 	width: 80px;
 	margin-top: 375px;
 	margin-left: 600px;
+	cursor: pointer;
 }
 
 .halo{
@@ -37,8 +45,8 @@ body{
 
 .halo_right{
 	float: right;
-	margin-top: 0px;
-	margin-left: 380px;
+	margin-top: 460px;
+	margin-right: 70px;
 }
 
 .arrow{
@@ -56,17 +64,34 @@ body{
 
 .arrowWrapper_right{
 	position: absolute;
-	top: 300px;
-	left: 1210px;
+	top: 240px;
+	left: 1140px;
 	color: white;
 }
 
-.arrow_left{
-	/*top: 300px;
-	left: 160px;*/
+.dialog{
+	display: none;
+	position: absolute;
+	width: 600px;
+	height: 150px;
+	padding: 20px;
+	background: url(../img/dialog_0.png) no-repeat;
+	background-size: 100%;
+	top: 600px;
+	left: 400px;
 }
 
-.arrow_right{
-	/*top: 300px;
-	left: 1220px;*/
+.speaker{
+	font-size: 18px;
+}
+
+.content{
+	height: 60px;
+	padding-top: 10px;
+	word-break: break-all;
+}
+
+.cue{
+	color: blue;
+	text-align: center;
 }
