--- a/CSS/login.css
+++ b/CSS/login.css
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'HKHB';
+    src: url('../font/华康海报体W12(1)/华康海报体W12.ttf');
+    font-style: normal;
+    font-weight: normal;
+}
+
 #mainWrapper {
     position: relative;
     overflow: hidden;
@@ -99,3 +106,47 @@ input::-webkit-input-placeholder {
 .go:hover{
 	opacity: 0.8;
 }
+
+.welcome{
+	display: none;
+	position: absolute;
+	width: 400px;
+	height: 300px;
+	background: url(../img/welcome.png) no-repeat;
+	background-size: 100% 80%;
+	top: 250px;
+	left: 450px;
+	font-family: HKHB;
+	color: orange;
+	opacity: 0;
+}
+
+.showWelcome{
+	display: block;
+	position: absolute;
+	width: 400px;
+	height: 300px;
+	background: url(../img/welcome.png) no-repeat;
+	background-size: 100% 80%;
+	top: 250px;
+	left: 450px;
+	font-family: HKHB;
+	color: orange;
+	opacity: 1;
+}
+
+.welcomeWords{
+	width: 100%;
+	height: 80px;
+	padding-top: 80px;
+	font-size: 29px;
+	-ms-text-align-last: center;
+	text-align-last: center;
+}
+.count{
+	height: 50px;
+	padding-top: 85px;
+	font-size: 22px;
+	text-align: center;
+}
+
