change file name

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'HKHB';
-    src: url('../font/华康海报体W12(1)/华康海报体W12.ttf');
+    src: url('../font/HKHB/hkhb.ttf');
     font-style: normal;
     font-weight: normal;
 }
