--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,102 +1,254 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-#mainWrapper{
-	position: relative;
-	background: url(../img/town_2.jpg) no-repeat;
-	background-size: 100%;
-	max-width: 1300px;
-	max-height: 800px;
-	min-width: 1300px;
-	min-height:  778px;
-	margin: 0 auto;
+#mainWrapper {
+	overflow: hidden;
+    position: relative;
+    background: url(../img/town_2.jpg) no-repeat;
+    background-size: 100%;
+    max-width: 1300px;
+    max-height: 800px;
+    min-width: 1300px;
+    min-height: 778px;
+    margin: 0 auto;
 }
 
-#role{
-	position: absolute;
+#role {
+    position: absolute;
+    width: 110px;
+    height: 160px;
+    background: url(../img/00.png) no-repeat;
+    background-position: 20px 27px;
+    top: 500px;
+    left: 600px;
+    cursor: pointer;
+}
+
+.username {
+    width: 100%;
+    height: 20px;
+    color: white;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 17px;
+}
+
+.npc_1 {
+    width: 80px;
+    margin-top: 375px;
+    margin-left: 600px;
+    cursor: pointer;
+}
+
+.halo {
+    width: 120px;
+}
+
+.halo_left {
+    float: left;
+    margin-left: 120px;
+    margin-top: 500px;
+}
+
+.halo_right {
+    float: right;
+    margin-top: 460px;
+    margin-right: 70px;
+}
+
+.arrow {
+    display: block;
+    width: 40px;
+    margin: 0 auto;
+}
+
+.arrowWrapper_left {
+    position: absolute;
+    top: 300px;
+    left: 160px;
+    color: white;
+}
+
+.arrowWrapper_right {
+    position: absolute;
+    top: 240px;
+    left: 1140px;
+    color: white;
+}
+
+.dialog {
+    display: none;
+    position: absolute;
+    width: 600px;
+    height: 150px;
+    padding: 20px;
+    background: url(../img/dialog_0.png) no-repeat;
+    background-size: 100%;
+    top: 600px;
+    left: 400px;
+}
+
+.speaker {
+    font-size: 18px;
+}
+
+.content {
+    height: 60px;
+    padding-top: 10px;
+    word-break: break-all;
+}
+
+.cue {
+    color: blue;
+    text-align: center;
+}
+
+.bar {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 10px;
+}
+
+.bar .money, .bar .backpack, .bar .envelope{
+    float: right;
+    overflow: hidden;
+    width: 200px;
+    height: 100%;
+    margin-right: 100px;
+    line-height: 50px;
+    color: orange;
+}
+
+.bar .backpack{
 	width: 100px;
-	height: 150px;
-	background: url(../img/00.png) no-repeat;
-	/*background-size: 100%;*/
-	top: 500px;
-	left: 600px;
+	margin-right: 5px;
 	cursor: pointer;
 }
 
-.npc_1{
-	width: 80px;
-	margin-top: 375px;
-	margin-left: 600px;
+.bar .envelope{
+	width: 100px;
+	margin-right: 5px;
 	cursor: pointer;
 }
 
-.halo{
-	width: 120px;
+.bar img {
+    width: 40px;
+    float: left;
 }
 
-.halo_left{
-	float: left;
-	margin-left: 120px;
-	margin-top: 500px;
+.bar .envelope img{
+	width: 50px;
+	padding-right: 5px;
 }
 
-.halo_right{
-	float: right;
-	margin-top: 460px;
-	margin-right: 70px;
+.talk {
+    position: absolute;
+    width: 30%;
+    left: -390px;
+    background: rgba(255, 192, 203, 0.3);
+    margin-top: -127px;
+    transition: left 1s;
 }
 
-.arrow{
-	display: block;
-	width: 40px;
-	margin: 0 auto;
-}
-
-.arrowWrapper_left{
+.onTalk{
 	position: absolute;
-	top: 300px;
-	left: 160px;
-	color: white;
+    width: 30%;
+    left: 0px;
+    background: rgba(255, 192, 203, 0.3);
+    margin-top: -127px;
+    transition: left 1s;
 }
 
-.arrowWrapper_right{
-	position: absolute;
-	top: 240px;
-	left: 1140px;
-	color: white;
+.showMessage {
+    width: 100%;
+    height: 400px;
+    border: solid 1px gray;
+    overflow: scroll;
 }
 
-.dialog{
+.showMessage li {
+    width: 100%;
+    min-height: 25px;
+    float: left;
+    padding: 5px 20px;
+    line-height: 25px;
+    color: white;
+    text-align: left;
+    list-style: none;
+    border-bottom: dashed 1px lightgray;
+}
+
+.showMessage span {
+    display: inline-block;
+    width: 50px;
+    word-break: break-all;
+}
+
+.showMessage p {
+    max-width: 280px;
+    padding: 0 10px;
+    display: inline-block;
+}
+
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: lightgray;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: #53868B;
+}
+
+
+.talk input, .onTalk input {
+    width: 80%;
+    height: 30px;
+}
+
+.talk .send, .onTalk .send {
+    display: inline-block;
+    float: right;
+    width: 15%;
+    height: 30px;
+    background: pink;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+
+.close {
 	display: none;
+    position: absolute;
+    top: 180px;
+    left: 95%;
+    width: 30px;
+    height: 30px;
+    border: solid 2px lightblue;
+    border-radius: 50%;
+    background: url(../img/close.png) no-repeat;
+    background-size: 100%;
+    cursor: pointer;
+}
+
+.open{
+	display: block;
 	position: absolute;
-	width: 600px;
-	height: 150px;
-	padding: 20px;
-	background: url(../img/dialog_0.png) no-repeat;
-	background-size: 100%;
-	top: 600px;
-	left: 400px;
+	top: 150px;
+    left: 100%;
+	width: 25px;
+	padding-left: 2px;
+	color: white;
+	border: solid 1px lightblue;
+	cursor: pointer;
 }
-
-.speaker{
-	font-size: 18px;
-}
-
-.content{
-	height: 60px;
-	padding-top: 10px;
-	word-break: break-all;
-}
-
-.cue{
-	color: blue;
-	text-align: center;
-}
-
-
-
-
-
